fixed password resset button that was stuck on loading, added success message when password is resset

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -65,5 +65,9 @@ padding-right: 20px;
 margin-left: 60px;
 }
 .dropzone-padding{
-margin-top: 10px;    
+margin-top: 10px;
+}
+
+.resizedAlert{
+    width: 450px;
 }
